--- a/technology/technology.css
+++ b/technology/technology.css
@@ -1,9 +1,18 @@
 #parallax6 {
-//background-image: url(img/par6.png);
-	background-position-x:left;
-	margin-top:-366px;
+	background-image: url(../img/par6.png);
+	background-position-x:center;
+	top:-516px;
 	position:relative;
-	z-index:1000;
+	z-index:1002;
 	padding-top:300px;
-	background-size:cover;
+}
+
+#dropTechnology{
+	margin: 0 auto;
+	margin-top: -130px;
+	width: 100px;
+	background-image: url(../img/cube_drop.png);
+	height: 307px;
+	background-position-y: bottom;
+	background-size: cover;
 }
